--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
       </a>
     </div>
     <div class="flex-grow-1 float-right">
-      <div ngbDropdown class="float-right">
+      <!-- <div ngbDropdown class="float-right">
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
           <button ngbDropdownItem>Profile</button>
           <button ngbDropdownItem>Logout</button>
@@ -26,10 +26,10 @@
             alt="avatar">
           Admin
         </button>
-      </div>
+      </div> -->
       <div>
-        <a routerLink="/sign-up" class="float-right sign-up mr-2">Sign up</a>
-        <a routerLink="/login" class="float-right login mr-2">Login</a>
+        <a routerLink="/sign-up" class="btn btn-primary float-right sign-up mr-2">Sign up</a>
+        <a routerLink="/login" class="btn btn-outline-primary float-right login mr-2">Login</a>
       </div>
     </div>
   </nav>
